fixed notification z-index:5

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -141,7 +141,7 @@
 }
 
 .notification {
-  z-index: 1;
+  z-index: 5;
   width: 90%;
   margin: 0 auto;
   height: auto;
